# vllm-serve

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  setup.py  vllm-serve.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml
docs/: index.md
scripts/: release.sh
vllm_serve_cli/: __init__.py  main.py
