[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-serve-cli"
version = "0.1.0"
description = "A CLI tool to easily serve LLM models with vLLM"
authors = [
    {name = "User", email = "user@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.3",
    "vllm>=0.8.0",
    "rich>=10.0.0",
]

[project.scripts]
vllm-serve = "vllm_serve_cli.main:cli" 