[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-serve-cli"
version = "0.1.0"
description = "A CLI tool to easily serve LLM models with vLLM"
readme = "README.md"
authors = [
    {name = "User", email = "user@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["vllm", "llm", "cli", "serve", "inference"]
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.3",
    "vllm>=0.8.0",
    "rich>=10.0.0",
    "questionary>=1.10.0",
]

[project.urls]
"Homepage" = "https://github.com/nikocevicstefan/vllm-serve-cli"
"Bug Tracker" = "https://github.com/nikocevicstefan/vllm-serve-cli/issues"
"Documentation" = "https://github.com/nikocevicstefan/vllm-serve-cli#readme"

[project.scripts]
vllm-serve = "vllm_serve_cli.main:cli" 